Trying to fix timer cutoff error

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,8 @@ button {
 #timer {
     font-family: digital-7;
     font-size: 7em;
-    font-kerning: normal;
+    line-height: normal;
+    x-overflow: hidden;
     background-image:linear-gradient(70deg,#4B79A1,#283E51); /* Dark Sky Gradient */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
